--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "trabalho-final",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://daniinyan.github.io/portfolio",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-brands-svg-icons": "^5.8.1",
@@ -10,6 +11,7 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.0.1",
     "nuka-carousel": "^4.5.4",
     "react": "^16.8.6",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
